--- a/src/view/components/sections/Header/index.module.scss
+++ b/src/view/components/sections/Header/index.module.scss
@@ -1,8 +1,34 @@
+@import "../../../assets/styles/scss/variables";
+
 .root {
+  background-color: pink;
+  .wrapper {
+    padding: 10px 0;
+
+    .create_btn {
+      background-color: white;
+    }
+    .search_input {
+      width: 50%;
+      border-radius: 10px;
+      padding: 10px 15px;
+      &,
+      &:focus {
+        border: none;
+        outline: none;
+      }
+    }
+  }
   .logo {
     cursor: pointer;
-    height: 30px;
-    width: 40px;
-    object-fit: contain;
+    height: 35px;
+    width: 50px;
+    background-size: cover;
+  }
+  .burger {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    margin-right: $nav-icon--margin-right;
   }
 }
