--- a/src/view/components/sections/Header/index.module.scss
+++ b/src/view/components/sections/Header/index.module.scss
@@ -1,6 +1,9 @@
 @import "../../../assets/styles/scss/variables";
 
 .root {
+  .middleWrapperContent {
+    @extend %middle-content--width;
+  }
   background-color: pink;
   .wrapper {
     padding: 10px 0;
