--- a/src/view/assets/styles/scss/_variables.scss
+++ b/src/view/assets/styles/scss/_variables.scss
@@ -1,6 +1,8 @@
 $container--paddingLR: 40px;
 $nav-icon--margin-right: 20px;
 
+// $middle-content--width: 65%;
+
 %middle-content--width {
   width: 65%;
   margin: 0 auto;
