--- a/src/view/components/sections/Header/index.module.scss
+++ b/src/view/components/sections/Header/index.module.scss
@@ -1,6 +1,8 @@
 @import "../../../assets/styles/scss/variables";
 
 .root {
+  position: sticky;
+  top: 0;
   .middleWrapperContent {
     @extend %middle-content--width;
   }
